--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     <script type="text/javascript" src="modules/header/header.module.js"></script>
     <script type="text/javascript" src="modules/header/controllers/header.controller.js"></script>
     <script type="text/javascript" src="modules/header/directives/header.directive.js"></script>
-    <!--addtask-->
-    <script type="text/javascript" src="modules/addtask/addtask.module.js"></script>
-    <script type="text/javascript" src="modules/addtask/controllers/addtask.controller.js"></script>
-    <script type="text/javascript" src="modules/addtask/directives/addtask.directive.js"></script>
+    <!--addTask-->
+    <script type="text/javascript" src="modules/addTask/addTask.module.js"></script>
+    <script type="text/javascript" src="modules/addTask/controllers/addTask.controller.js"></script>
+    <script type="text/javascript" src="modules/addTask/directives/addTask.directive.js"></script>
     <!--showTask-->
     <script type="text/javascript" src="modules/showTask/showTask.module.js"></script>
     <script type="text/javascript" src="modules/showTask/controllers/showTask.controller.js"></script>
